[project]
name = "aaanimal"
classifier = []
maintainer = "Reilly Tucker Siemens"
maintainer-email = "reilly@tuckersiemens.com"
requires-python = ">=3.8"

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    python3.8
    python3.9
    python3.10
requires = tox-pyo3

[testenv]
pyo3 = True
deps =
    pytest ~= 6.2.0
    pytest-randomly ~= 3.8.0
commands =
    pytest -v {posargs}
skip_install = True

[testenv:rust]
allowlist_externals =
    cargo
commands =
    cargo fmt --all -- --check
    cargo clippy -- -D warnings
    # If any Rust tests are written they can be run here with
    # cargo test
"""
