[project]
name = "aaanimal"
classifier = []
maintainer = "Reilly Tucker Siemens"
maintainer-email = "reilly@tuckersiemens.com"
requires-python = ">=3.8"

[build-system]
requires = ["maturin>=0.11,<0.12"]
build-backend = "maturin"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist =
    python3.8
    python3.9
    python3.10
requires = tox-pyo3

[testenv]
pyo3 = True
deps =
    pytest ~= 6.2.0
    pytest-randomly ~= 3.8.0
commands =
    pytest {posargs}
skip_install = True

[testenv:rust]
# I'd use allowlist_externals, but tox-pyo3 uses whitelist_externals and tox
# itself disallows using both.
#
# See https://github.com/thedrow/tox-pyo3/issues/2 for more info.
whitelist_externals =
    cargo
commands =
    cargo fmt --all -- --check
    cargo clippy -- -D warnings
    # If any Rust tests are written they can be run here with
    # cargo test

[testenv:docs]
basepython = python3
deps =
    sphinx ~= 4.1.0
    furo == 2021.8.11b42
commands =
    sphinx-build -b html docs {posargs:docs/_build/html}
"""
